修改暂停持久化间隔 添加固定groupIndex避免暂停错误的ticket. 当性能分析的时候暂停分桶. 新增对所有group进行分析的功能. 消息格式修正 命令格式修正